--- a/.github/workflows/content-validation.yml
+++ b/.github/workflows/content-validation.yml
@@ -66,25 +66,55 @@ jobs:
               console.log('No issues file found');
               return;
             }
-            const issues = JSON.parse(fs.readFileSync('validation-issues.json', 'utf8'));
+            const allIssues = JSON.parse(fs.readFileSync('validation-issues.json', 'utf8'));
             
-            for (const issue of issues) {
-              if (issue.severity === 'critical' || issue.severity === 'high') {
-                await github.rest.issues.create({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  title: `[Content] ${issue.type}: ${issue.file}`,
-                  body: `## Content Validation Issue\n\n` +
-                        `**File:** ${issue.file}\n` +
-                        `**Line:** ${issue.line}\n` +
-                        `**Severity:** ${issue.severity.toUpperCase()}\n` +
-                        `**Type:** ${issue.type}\n\n` +
-                        `### Message\n${issue.message}\n\n` +
-                        (issue.suggestion ? `### Suggestion\n${issue.suggestion}\n\n` : '') +
-                        `**Related PR:** #${context.issue.number}`,
-                  labels: ['content-validation', `severity-${issue.severity}`, issue.type]
-                });
+            // Filter for critical/high severity
+            const criticalIssues = allIssues.filter(i => i.severity === 'critical' || i.severity === 'high');
+            
+            // Group by file
+            const byFile = criticalIssues.reduce((acc, issue) => {
+              if (!acc[issue.file]) {
+                acc[issue.file] = [];
               }
+              acc[issue.file].push(issue);
+              return acc;
+            }, {});
+            
+            // Create one issue per file
+            for (const [file, fileIssues] of Object.entries(byFile)) {
+              const severityEmojis = { critical: '🔴', high: '🟡', medium: '🔵', low: '🟠' };
+              
+              let body = `## Content Validation Issues in \`${file}\`\n\n`;
+              body += `**PR:** #${context.issue.number}\n`;
+              body += `**Total Issues:** ${fileIssues.length}\n\n`;
+              
+              // Group by severity
+              const bySeverity = fileIssues.reduce((acc, issue) => {
+                if (!acc[issue.severity]) acc[issue.severity] = [];
+                acc[issue.severity].push(issue);
+                return acc;
+              }, {});
+              
+              for (const severity of ['critical', 'high']) {
+                if (bySeverity[severity]?.length > 0) {
+                  body += `### ${severityEmojis[severity]} ${severity.toUpperCase()} (${bySeverity[severity].length})\n\n`;
+                  bySeverity[severity].forEach(issue => {
+                    body += `- **Line ${issue.line}** - ${issue.message}\n`;
+                    if (issue.suggestion) {
+                      body += `  - 💡 _${issue.suggestion}_\n`;
+                    }
+                  });
+                  body += '\n';
+                }
+              }
+              
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: `[Content Validation] ${file}`,
+                body: body,
+                labels: ['content-validation', 'PR-' + context.issue.number]
+              });
             }
 
       - name: Fail on critical issues
