--- a/.github/workflows/auto-fix.yml
+++ b/.github/workflows/auto-fix.yml
@@ -30,27 +30,30 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Get issue details
-        id: issue
+      - name: Get filename from comment
+        id: parse
         uses: actions/github-script@v7
         with:
           script: |
-            const issue = await github.rest.issues.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number
-            });
-            
-            // Extract filename from title: "[Content Validation] filename.md"
-            const match = issue.data.title.match(/\[Content Validation\] (.+)/);
+            const comment = context.payload.comment.body;
+            // Extract filename from "/fix-content filename.md"
+            const match = comment.match(/\/fix-content\s+(\S+)/);
             const filename = match ? match[1] : null;
+            
+            if (!filename) {
+              core.setFailed('No filename found in comment. Use: /fix-content filename.md');
+              return;
+            }
+            
+            core.setOutput('filename', filename);
+            core.info(`Filename: ${filename}`);
             
             core.setOutput('filename', filename);
             core.setOutput('issue_body', issue.data.body);
 
       - name: Apply auto-fixes
         env:
-          FILENAME: ${{ steps.issue.outputs.filename }}
+          FILENAME: ${{ steps.parse.outputs.filename }}
         run: |
           # Validate filename to prevent command injection
           if [[ ! "$FILENAME" =~ ^[a-zA-Z0-9._/-]+$ ]]; then
@@ -63,8 +66,8 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add "${{ steps.issue.outputs.filename }}"
-          git commit -m "Auto-fix content issues in ${{ steps.issue.outputs.filename }}" || echo "No changes to commit"
+          git add "${{ steps.parse.outputs.filename }}"
+          git commit -m "Auto-fix content issues in ${{ steps.parse.outputs.filename }}" || echo "No changes to commit"
           git push
 
       - name: Comment on issue
